--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "shipfair",
+  "name": "Shipfair",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^9.1.3",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -35,5 +37,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "Provides platform for online shipment service",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/falakamin31/shipfair.git"
+  },
+  "author": "Falak Amin",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/falakamin31/shipfair/issues"
+  },
+  "homepage": "https://github.com/falakamin31/shipfair#readme"
 }
