--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.1.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.3.1",
